src/objects/PaymentInvoice__c.object
<CustomObject>
    <description>DAZN Invoice Payment object.  An Invoice Payment is a mechanism to tie a payment to an invoice and indicate how much of the payment to apply to the invoice.  PaymentInvoice has Master-Detail relationship to Payment object and Lookup relationship to Invoice.</description>
    <fields>
        <fullName>ApplyAmount__c</fullName>
        <description>The amount of the payment.</description>
        <label>Applied Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EXT_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External Id For Invoice Payment object,   Represents a DAZN Invoice Payment object Id</description>
        <externalId>true</externalId>
        <label>Unique External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>The Invoice Payment ID in DAZN system.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Invoice Payment ID in DAZN system.</inlineHelpText>
        <label>External ID(Deprecated)</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The invoice associated with this Invoice Payment object.</description>
        <inlineHelpText>The invoice associated with this Invoice Payment object.</inlineHelpText>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Invoice Payments</relationshipLabel>
        <relationshipName>PaymentInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <description>The payment associated with this Invoice Payment object.</description>
        <inlineHelpText>The payment associated with this Invoice Payment object.</inlineHelpText>
        <label>Payment</label>
        <referenceTo>Payment__c</referenceTo>
        <relationshipLabel>Invoice Payments</relationshipLabel>
        <relationshipName>PaymentInvoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RefundAmount__c</fullName>
        <description>Specifies the amount of a refund that applied against a payment on an earlier the invoice.</description>
        <inlineHelpText>Specifies the amount of a refund that applied against a payment on an earlier the invoice.</inlineHelpText>
        <label>Refund Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>DAZN Invoice Payment</label>
    <nameField>
        <displayFormat>IP{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DAZN Invoice Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>